Use StandardCharsets to prevent unnecessary charset lookup